force-app/main/default/objects/material__c/material__c.object-meta.xml
<CustomObject>
    <label>材料</label>
    <nameField>
        <displayFormat>ST_{000000000}</displayFormat>
        <label>材料名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>