force-app/main/default/objects/material__c/fields/ST_billingDate__c.field-meta.xml
<CustomField>
    <fullName>ST_billingDate__c</fullName>
    <label>請求予定日</label>
    <type>Date</type>
</CustomField>