force-app/main/default/objects/material__c/fields/ST_itemCode__c.field-meta.xml
<CustomField>
    <fullName>ST_itemCode__c</fullName>
    <label>品目コード</label>
    <length>20</length>
    <type>Text</type>
</CustomField>