force-app/main/default/objects/material__c/fields/ST_itemName__c.field-meta.xml
<CustomField>
    <fullName>ST_itemName__c</fullName>
    <label>品名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>