force-app/main/default/objects/material__c/fields/ST_manufacturer__c.field-meta.xml
<CustomField>
    <fullName>ST_manufacturer__c</fullName>
    <label>メーカー名</label>
    <length>80</length>
    <type>Text</type>
</CustomField>