force-app/main/default/objects/material__c/fields/ST_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ST_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>材料</relationshipLabel>
    <relationshipName>Opportunitymaterial</relationshipName>
    <type>Lookup</type>
</CustomField>