force-app/main/default/objects/material__c/fields/ST_purchaseAmount__c.field-meta.xml
<CustomField>
    <fullName>ST_purchaseAmount__c</fullName>
    <label>仕入金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>