force-app/main/default/objects/material__c/fields/ST_purchaseDate__c.field-meta.xml
<CustomField>
    <fullName>ST_purchaseDate__c</fullName>
    <label>仕入日</label>
    <type>Date</type>
</CustomField>