force-app/main/default/objects/material__c/fields/ST_salesAmount__c.field-meta.xml
<CustomField>
    <fullName>ST_salesAmount__c</fullName>
    <label>売上金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>