force-app/main/default/objects/material__c/fields/ST_salesDate__c.field-meta.xml
<CustomField>
    <fullName>ST_salesDate__c</fullName>
    <label>売上日</label>
    <type>Date</type>
</CustomField>