force-app/main/default/objects/material__c/fields/ST_shipmentDate__c.field-meta.xml
<CustomField>
    <fullName>ST_shipmentDate__c</fullName>
    <label>出荷日</label>
    <type>Date</type>
</CustomField>