force-app/main/default/objects/material__c/fields/ST_shipmentQuantity__c.field-meta.xml
<CustomField>
    <fullName>ST_shipmentQuantity__c</fullName>
    <label>出荷数量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>