force-app/main/default/objects/material__c/fields/ST_supplier__c.field-meta.xml
<CustomField>
    <fullName>ST_supplier__c</fullName>
    <label>仕入先名</label>
    <length>80</length>
    <type>Text</type>
</CustomField>