force-app/main/default/objects/material__c/fields/syukkasuuryou_goal__c.field-meta.xml
<CustomField>
    <fullName>syukkasuuryou_goal__c</fullName>
    <label>目標出荷数量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>