force-app/main/default/objects/material__c/recordTypes/RecordTypeAchievements.recordType-meta.xml
<RecordType>
    <fullName>RecordTypeAchievements</fullName>
    <active>true</active>
    <label>実績</label>
</RecordType>