force-app/main/default/objects/material__c/recordTypes/RecordTypePlan.recordType-meta.xml
<RecordType>
    <fullName>RecordTypePlan</fullName>
    <active>true</active>
    <label>目標</label>
</RecordType>