force-app/main/default/objects/material__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ST_shipmentDate__c</columns>
    <columns>ST_Opportunity__c</columns>
    <columns>ST_manufacturer__c</columns>
    <columns>ST_itemName__c</columns>
    <columns>ST_shipmentQuantity__c</columns>
    <columns>ST_salesAmount__c</columns>
    <columns>ST_purchaseAmount__c</columns>
    <columns>ST_specification__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>